# OneClickBackup

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  generate_logo.py  install.bat  installer.iss  launch.bat  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  sign.ps1
.github/workflows/: ci.yml
docs/: index.html
src/: __init__.py
src/core/: __init__.py  backup.py  clone.py  cloud_backup.py  disk_health.py  disk_image.py  disk_info.py  history.py  operations.py  recovery.py  scheduler.py  secure_wipe.py  updater.py  winpe.py
src/ui/: __init__.py  app.py  dashboard.py  pages.py  widgets.py
src/utils/: __init__.py  admin.py  cli.py  crash_report.py  helpers.py  i18n.py  notifications.py  report.py  settings.py
tests/: conftest.py  test_backup.py  test_coverage_boost.py  test_coverage_extra.py  test_disk_info.py  test_helpers.py  test_i18n.py  test_integration.py  test_new_modules.py  test_operations.py  test_security.py  test_widgets.py
